--- a/priv/gettext/default.pot
+++ b/priv/gettext/default.pot
@@ -58,7 +58,7 @@ msgstr "Использовать любые не авторизованные В
 #, elixir-format
 #: lib/cookpod_web/templates/page/index.html.eex:2
 msgid "Welcome to %{name}!"
-msgstr "Добро пожаловть в %{name}!"
+msgstr "Добро пожаловать в %{name}!"
 
 #, elixir-format
 #: lib/cookpod_web/templates/page/terms.html.slime:1
